[gd_scene load_steps=10 format=2]

[ext_resource path="res://Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/maps/Level5.png" type="Texture" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sound/music/1. Woodwind Quintet - I. Prelude.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="HUD"]
margin_left = 384.434
margin_top = 164.185
margin_right = 1560.43
margin_bottom = 315.185
custom_fonts/font = SubResource( 1 )
text = "Escort Mission 2020"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 422.248
margin_top = 417.486
margin_right = 1519.25
margin_bottom = 610.486
custom_fonts/font = SubResource( 2 )
text = "Congratulations! You only lost:
80 sheep"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HUD"]
margin_left = 809.859
margin_top = 730.031
margin_right = 1036.86
margin_bottom = 854.031
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="HUD"]
margin_left = 1525.68
margin_top = 775.36
margin_right = 1653.68
margin_bottom = 807.36
rect_scale = Vector2( 2, 2 )
min_value = -20.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Music"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Music"

[node name="SFX" type="HSlider" parent="HUD"]
margin_left = 1525.68
margin_top = 848.982
margin_right = 1653.68
margin_bottom = 880.982
rect_scale = Vector2( 2, 2 )
min_value = -20.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/SFX"]
margin_right = 40.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "SFX"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"
[connection signal="pressed" from="HUD/Button" to="." method="_on_Button_pressed"]
[connection signal="value_changed" from="HUD/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="HUD/SFX" to="." method="_on_SFX_value_changed"]
